--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
+    "start":"node backend/server.js ",
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend ",
     "server": "nodemon backend/server.js "
   },
   "type": "module",
@@ -17,11 +16,14 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
-    "socket.io": "^4.8.1"
+    "react-icons": "^5.5.0",
+    "socket.io": "^4.8.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.9",
